# MacroHub

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml  verify_install.py
macro_hub/: __init__.py  macro_hub.py
web/extensions/: macro_hub_extension.js
