[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro_hub"
version = "0.1.0"
description = "MacroHub for ComfyUI - Productivity extension for workflow automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MacroHub", email = "macro@hub.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/tomtom604/MacroHub"
Repository = "https://github.com/tomtom604/MacroHub"
Issues = "https://github.com/tomtom604/MacroHub/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["macro_hub*"]
exclude = ["tests*"]